[package]
name = "nids-feature-extraction-tool"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.196", features = ["derive"] }
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya"}
common = { path = "../common", features = ["user"] }
anyhow = "1"
log = "0.4"
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
bytes = "1"
env_logger = "0.11"

[[bin]]
name = "feature-extraction-tool"
path = "src/main.rs"