[package]
name = "rustiflow"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.196", features = ["derive"] }
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
common = { path = "../common", features = ["user"] }
anyhow = "1"
log = "0.4"
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
] }
bytes = "1"
env_logger = "0.11"
chrono = "0.4.34"
dashmap = "5.5.3"
pcap = "2.0.0"
pnet = "0.34.0"
lazy_static = "1.4.0"
libc = "0.2.153"
priority-queue = "2.0.3"

[[bin]]
name = "rustiflow"
path = "src/main.rs"
