[package]
name = "rustiflow"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.196", features = ["derive"] }
aya = { version = "0.13.0", features = ["async_tokio"] }
aya-log = "0.2.1"
common = { path = "../common", features = ["user"] }
anyhow = "1"
log = "0.4"
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
    "sync"
] }
bytes = "1"
env_logger = "0.11"
chrono = "0.4.34"
dashmap = "6.0.1"
pcap = "2.0.0"
pnet = "0.35.0"
lazy_static = "1.4.0"
libc = "0.2.153"
num_cpus = "1.14"
confy = "0.6.1"
crossterm = "0.28.1"
tui = "0.19"
strum = "0.26.3"
strum_macros = "0.26.4"

[[bin]]
name = "rustiflow"
path = "src/main.rs"
